--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -1,7 +1,71 @@
+// .btn {
+//   background-color: $highlight1;
+//   color: #291F20;
+//   width: 95%;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
+.btn1,
 .stage-btn {
-  font-family: 'Oswald', sans-serif;;
-  color: $an-turquoise;
-  font-size: 3em;
+  //display: inline-block;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.5em;
   text-align: center;
-  background-color: $spring-yellow;
+  background-color: $highlight5;
+  box-shadow: 0 3px 0 0 #ff8a18;  // Must be the actual hex value, not a variable
+  color: #291F20;
+  outline: $spring-green
+}
+
+.dropdown-menu {
+  background-color: $contrast1;
+  font-family: 'Monda', sans-serif;
+}
+
+.btn-group {
+  width: 95%;
+  text-align: center;
+}
+
+.btn,
+.droppy {
+  display: block;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.25em;
+  text-align: center;
+  background-color:#a6a6a6;
+  background-color: #fff;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2); // Must be the actual hex value, not a variable
+  color: #0099cc;
+  outline: $spring-green;
+}
+
+.btn-primary.raised {
+  background: #0099cc;
+  box-shadow: 0 3px 0 0 #007299;
+}
+
+
+
+
+
+
+
+.btn {
+  outline: none;
+}
+.btn.active.focus,
+.btn.active:focus,
+.btn:focus,
+.btn:hover {
+  color: $letterdark;
+  //box-shadow: 0 20px 0 0 white;
+  outline: $spring-green;
 }
