--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -5,3 +5,23 @@ $spring-yellow: #FFDE16;
 $orange: #F76010;
 $an-orange: #FAAC58;
 $an-turquoise: #0489B1;
+
+
+// Palette One
+// $background: #FDE3CA;
+// $letterdark: #291F20;
+$highlight4: #ff8a18;
+$highlight5: #FCB37C;
+// $contrast1: #DCA3B6;
+
+
+// Palette Two
+$background: #CC333F;
+$offwhite1: #FBF8EF;
+$offwhite2: #FDE3CA;
+$letterdark: #6A4A3C;
+$letterdark2: #291F20;
+$highlight1: #CC333F;
+$highlight2: #EB6841;
+$highlight3: #EDC951;
+$contrast1: #00A0B0;
