--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,15 +1,18 @@
 @import "colors";
-@import "breadcrumbs";
+@import "buttons";
+@import "crumbs2";
 @import "lists";
-@import "animate";
+//@import "animate";
 
 html, body{
   height: 100%;
+  background-color: $background;
+  font-family: 'Monda', sans-serif;
 }
 
 h1 {
-  font-family: 'Oswald', sans-serif;;
-  color: $an-turquoise;
+  font-family: 'Oswald', sans-serif;
+  color: $contrast1;
   font-size: 3em;
   text-align: center;
   padding-top: 10px;
@@ -18,9 +21,13 @@ h1 {
 h2, h3, h4 {
   font-family: 'Oswald', sans-serif;
   font-style: bold;
-  color: $an-turquoise;
+  color: $contrast1;
   //padding-top: 20px;
   margin-bottom: 0;
+}
+
+.top-button {
+  padding-top: 50px;
 }
 
 .center {
@@ -34,26 +41,56 @@ h2, h3, h4 {
 
 p .center {
   text-align: center;
-  padding-top: -25px;
+  //padding-top: -25px;
 }
 
-p {
-  font-family: 'Monda', sans-serif;
-}
-
-#tagline, .subhead {
+.subhead {
   color: $an-orange;
   text-align: center;
   padding-bottom: 10px;
 }
 
+
+a.term {
+  color: $letterdark2;
+}
+
+a.term.active.focus,
+a.term.active:focus,
+a.term:focus,
+a.term:hover {
+  color: $spring-green;
+}
+
 #tagline {
   font-size: 1.09em;
+  text-align: center;
+  color: $letterdark;
 }
+
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   padding: 0;
-  max-height: 85px;
+  max-height: 85pxl;
+}
+
+.stage {
+  padding-bottom: 25px;
+}
+
+dt {
+  font-style: bold;
+}
+
+a.active.focus,
+a.active:focus,
+a:focus,
+a:hover {
+  color: $contrast1;
+}
+
+.noDecoration, a:link, a:visited {
+    text-decoration: none;
 }
